# node-wasm-example

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js
.github/: dependabot.yml
.github/workflows/: webpack.yml
crates/hello/: Cargo.toml
crates/hello/src/: lib.rs
crates/hello/wit/: world.wit
src/: hello.mjs  index.ts
